fix width on mobile

--- a/css/iff.css
+++ b/css/iff.css
@@ -367,11 +367,14 @@ a:active {
 }
 
 @media (min-width: 767px) {
-
+	.container {
+		width: 90%;
+	}
 }
 
-@media (max-width: 767px) {
-	.container {
-		width: 100%;
+@media (max-width: 768px) {
+	html, body {
+		width: auto !important;
+		overflow-x: hidden !important;
 	}
 }
